// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profiles renders the Profiles with data 1`] = `
<div
  class="profiles__Container-sc-6awth9-0 cDmKfB"
>
  <h1
    class="profiles__Title-sc-6awth9-1 kJsPIJ"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-6awth9-2 ktLjcS"
  >
    <li
      class="profiles__User-sc-6awth9-5 hElXrS"
    >
      <img
        class="profiles__Picture-sc-6awth9-4 cAFgzt"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-6awth9-3 cvTgL"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`Profiles renders the Profiles with data but no image 1`] = `
<div
  class="profiles__Container-sc-6awth9-0 cDmKfB"
>
  <h1
    class="profiles__Title-sc-6awth9-1 kJsPIJ"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-6awth9-2 ktLjcS"
  >
    <li
      class="profiles__User-sc-6awth9-5 hElXrS"
    >
      <img
        class="profiles__Picture-sc-6awth9-4 cAFgzt"
        data-testid="profile-picture-miss"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-6awth9-3 cvTgL"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
